force-app/main/default/objects/Control_Flags__c/Control_Flags__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Control Flags - this hierarchy custom settings helps in controlling the execution of Validation Rules, Workflow Rules, Triggers, Process Builders and other area.

Common settings</description>
    <label>Control Flags</label>
</CustomObject>