force-app/main/default/objects/Control_Flags__c/fields/Disable_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Disable Triggers</description>
    <label>Disable Trigger</label>
    <type>Checkbox</type>
</CustomField>