force-app/main/default/objects/Control_Flags__c/fields/Disable_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The purpose of this checkbox is to disable the VR.</description>
    <label>Disable Validation</label>
    <type>Checkbox</type>
</CustomField>