force-app/main/default/objects/Control_Flags__c/fields/Disable_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Disable_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>helps in disabling the workflow rules.</description>
    <label>Disable Workflow</label>
    <type>Checkbox</type>
</CustomField>